[package]
name = "mock-microgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
prost-types = "0.12.1"
tokio = { version = "1.33.0", features = ["rt", "macros"] }
tokio-stream = "0.1.14"
tulisp = "0.15.0"
notify = "6.1.1"
futures = "0.3.30"
log = "0.4.20"
simplelog = "0.12.1"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.1"
