[package]
name = "microsim"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.1"
prost = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.39.2", features = ["rt", "macros"] }
tokio-stream = "0.1.15"
tulisp = { path = "../tulisp" }
notify = "6.1.1"
futures = "0.3.30"
log = "0.4.22"
simplelog = "0.12.2"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.12.1"
prost-build = "0.13.1"
